SonarLint fixes